fixed some layout issues

--- a/src/css/utility.css
+++ b/src/css/utility.css
@@ -17,6 +17,9 @@
 .cb{
   color:black;
 }
+.pb400px{
+  padding-bottom: 400px;
+}
 .bw{
   background:white;
 }
